[tool.poetry]
name = "arrnounced-test"
version = "0.1.0"
description = "Integration tests for Arrnounced"
authors = ["WeAnnounce <weannounce@protonmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
