[tool.poetry]
name = "arrnounced-test"
version = "0.1.0"
description = "Integration tests for Arrnounced"
authors = ["WeAnnounce <weannounce@protonmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
arrnounced = { path = "../arrnounced", develop = true }
selenium = "^3.141.0"
coverage = "^6.2"
py-spy = "^0.3.11"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
