[tool.poetry.dependencies]
python = ">=3.7, <3.10"
arrnounced = { path = "../arrnounced", develop = true }
selenium = "^3.141.0"
coverage = "^6.2"
py-spy = "^0.3.11"
requests = "^2.22.0"

[build-system]
requires = ["setuptools ~= 69.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "arrnounced-test"
version = "0.1.0"
description = "Integration tests for Arrnounced"
authors = [
  {"name" = "WeAnnounce", "email" = "weannounce@protonmail.com"},
]
license = {"text" = "GPLv3"}

requires-python = ">= 3.7, < 3.10"

dependencies = [
  # No relative paths allwed so relying on this symlink
  # TODO: get rid of this kind of dependency
  "arrnounced @ file:///arrnounced",
  "black",
  "coverage~=6.2",
  "pre-commit",
  "py-spy~=0.3.11",
  "requests~=2.22.0",
  "selenium~=3.141.0",
]

[tool.setuptools.packages.find]
include = [
  "helpers",
]
